flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
}

img {
  width: 100px;
  height: 100px;
}

.title {
  font-size: 36px;
  font-weight: 900;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

/*solution*/
.title {
  text-align: center;
}

.plants {
  display: flex;
  justify-content: space-around;
}

.plant-one,
.plant-two,
.plant-three,
.plant-four {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.text {
  text-align: center;
}

